--- a/auctions/templates/auctions/watchlist.html
+++ b/auctions/templates/auctions/watchlist.html
@@ -2,6 +2,17 @@
 
 {% block body %}
 
-Ruko Zara
+    <h2>Watchlist</h2>
+    {% for object in watchlist %}
+        {% if object.listing.image %}
+           <a href="{% url 'auctions:listing' object.listing.id %}"><img src="{{ object.listing.image.url }}" alt="Photo of {{object.listing.title}}"></a> 
+        {% endif %}
+        {{object.listing.title}}
+        {{object.listing.price}}
+        {{object.listing.time}}
+        {% empty %}
+        <h5>No Listings Watchlisted.</h5>
+    {% endfor %}
+    
 
 {% endblock %}
