--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -17,30 +17,64 @@
 {% endif %}
 <img src="{{listing.image.url}}" alt="{{listing.title}}">
 <h5>{{listing.description}}</h5>
-<h5>{{listing.bidCurrentPrice}}</h5>
-{% if user.is_authenticated %}
-    {% if creatorIsViewingTheList %}
-        <button>Close</button>
-    {% else %}
-        <form action="{% url 'auctions:listing' listing.id%}" method="post">
-            {% csrf_token %}
-            <input type="hidden" name="isBidingForm" value="1">
-            
-            {% if currentBidder %}
-            <p>{{numBids}} bid(s) so far. {{currentBidder}} bid is the current bid</p>
-            {% else %}
-            <p>{{numBids}} bid(s) so far.</p>
-            {% endif %}
-            
 
-            <input type="number" min="0" step="0.01" name="bidPrice" placeholder="Bid">
-            {% if message %}
-                {{message}}
-            {% endif %}
-            <input type="submit" value="Place Bid">
-        </form>
+{% if listing.isListingOpen %}
+
+    <h5>{{listing.bidCurrentPrice}}</h5>
+
+    {% if user.is_authenticated %}
+
+        {% if creatorIsViewingTheList %}
+
+            <form action="{% url 'auctions:listing' listing.id %}" method="post">
+                {% csrf_token %}
+                <input type="submit" value="Close">
+                <input type="hidden" name="isBidingForm" value="0">
+            </form>
+
+        {% else %}
+
+            <form action="{% url 'auctions:listing' listing.id%}" method="post">
+                {% csrf_token %}
+                <input type="hidden" name="isBidingForm" value="1">
+                
+                {% if currentBidder %}
+                    <p>{{numBids}} bid(s) so far. {{currentBidder}} bid is the current bid</p>
+                {% else %}
+                    <p>{{numBids}} bid(s) so far.</p>
+                {% endif %}
+                
+
+                <input type="number" min="0" step="0.01" name="bidPrice" placeholder="Bid">
+
+                {% if message %}
+                    {{message}}
+                {% endif %}
+                 
+                <input type="submit" value="Place Bid">
+            </form>
+        {% endif %}
+    
+    {% else %}
+
+    <a href="{% url 'auctions:login' %}">Login to place bid on this listing</a>
+
     {% endif %}
-{% elif listing.isListingOpen %}
-<a href="{% url 'auctions:login' %}">Login to place bid on this listing</a>
+    
+{% else %}
+
+    {% if listing.winner %}
+
+        {% if listing.winner == request.user %}
+            <p>Listing Closed at {{ listing.bidCurrentPrice }} with {{ numBids }} bid(s). You are the winner of this auction.</p>
+        {% else %}
+            <p>Listing Closed at {{ listing.bidCurrentPrice }} with {{ numBids }} bid(s). {{ listing.winner }} is the winner of this auction.</p>
+        {% endif %}
+
+    {% else %}
+        <p>Listing Closed at {{ listing.bidCurrentPrice }} with {{ numBids }} bid(s).</p>
+    {% endif %}
+
 {% endif %}
+
 {% endblock %}
