--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -36,10 +36,17 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'auctions:login' %}">Log In</a>
                 </li>
+               
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'auctions:register' %}">Register</a>
                 </li>
             {% endif %}
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'auctions:category' %}">Categories</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'auctions:closelistings' %}">Close Listings</a>
+            </li>
         </ul>
         <hr>
         {% block body %}
