--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -1,54 +1,73 @@
 {% load static %}
 
+
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
     <head>
         <title>{% block title %}Auctions{% endblock %}</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link href="{% static 'auctions/styles.css' %}" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link href="{% static 'auctions/styles.css' %}" type="text/css" rel="stylesheet">
     </head>
     <body>
-        <h1>Auctions</h1>
-        <div>
-            {% if user.is_authenticated %}
-                Signed in as <strong>{{ user.username }}</strong>.
-            {% else %}
-                Not signed in.
-            {% endif %}
-        </div>
-        <ul class="nav">
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'auctions:index' %}">Active Listings</a>
-            </li>
-            {% if user.is_authenticated %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'auctions:logout' %}">Log Out</a>
-                </li>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        
+        <!-- navbar starts -->
 
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'auctions:createlisting' %}">Create Listing</a>
-                </li>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="{% url 'auctions:index' %}">
+        <img src="{% static 'auctions/logo.png' %}" alt="Logo" width="26" height="26" class="d-inline-block align-text-top">
+        Auctions</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarText">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link text-white link-body-emphasis" aria-current="page" href="{% url 'auctions:index' %}">Active Listings</a>
+        </li>
 
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'auctions:watchlist' %}">Watchlist</a>
-                </li>
+        {% if user.is_authenticated %}
+
+        <li class="nav-item">
+            <a class="nav-link text-white link-body-emphasis" href="{% url 'auctions:createlisting' %}">Create Listing</a>
+        </li>
+
+        <li class="nav-item">
+            <a class="nav-link text-white link-body-emphasis" href="{% url 'auctions:watchlist' %}">Watchlist</a>
+        </li>
+
+        {% endif %}
+        <li class="nav-item">
+          <a class="nav-link text-white link-body-emphasis" href="{% url 'auctions:category' %}">Categories</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white link-body-emphasis" href="{% url 'auctions:closelistings' %}">Closed Listings</a>
+        </li>
+
+        
+      </ul>
+      
+        {% if user.is_authenticated %}
+        <span class="navbar-text">
+                Signed in as  <a href="{% url 'auctions:userProfile' user.username%}" class="text-warning " >{{ user.username }}</a>.
+            </span>
+            <a href="{% url 'auctions:logout' %}"><button type="button" class="btn btn-outline-warning me-2 ms-3">Log Out</button></a>
             {% else %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'auctions:login' %}">Log In</a>
-                </li>
-               
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'auctions:register' %}">Register</a>
-                </li>
+            <a href="{% url 'auctions:login' %}"><button type="button" class="btn btn-outline-warning me-2 ms-1">Login</button></a>
+            <a href="{% url 'auctions:register' %}"><button type="button" class="btn btn-warning">Register</button></a>
             {% endif %}
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'auctions:category' %}">Categories</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'auctions:closelistings' %}">Close Listings</a>
-            </li>
-        </ul>
-        <hr>
+        <!-- <button type="button" class="btn btn-outline-primary me-2 ms-1">Login</button>
+        <button type="button" class="btn btn-primary">Sign-up</button> -->
+    </div>
+  </div>
+</nav>
+
+        <!-- navbar ends -->
+
         {% block body %}
         {% endblock %}
     </body>
