--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -3,20 +3,21 @@
 
 
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="dark">
+<html lang="en" class="h-100" data-bs-theme="dark">
     <head>
         <title>{% block title %}Auctions{% endblock %}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link href="{% static 'auctions/styles.css' %}" type="text/css" rel="stylesheet">
     </head>
-    <body>
+    <body class="d-flex flex-column h-100">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         
         <!-- navbar starts -->
 
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg  ">
   <div class="container-fluid">
     <a class="navbar-brand" href="{% url 'auctions:index' %}">
         <img src="{% static 'auctions/logo.png' %}" alt="Logo" width="26" height="26" class="d-inline-block align-text-top">
@@ -67,8 +68,40 @@
 </nav>
 
         <!-- navbar ends -->
+          {% block body %}
+           {% endblock %}
+        
 
-        {% block body %}
-        {% endblock %}
+        <!-- footer starts here  -->
+
+        <footer class="footer mt-auto py-3  border-top">
+          <div class="container-fluid">
+            <div class="row d-flex flex-wrap justify-content-between align-items-center ">
+              <div class="col-md-4 d-flex align-items-center">
+            <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
+              <!-- <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg> -->
+              <img src="{% static 'auctions/logo.png' %}" alt="Logo" width="26" height="26" class="d-inline-block align-text-top">
+
+            </a>
+            <span class="mb-3 mb-md-0 text-body-primary text-capitalize text-warning">This App is made with  <i class="fa-regular fa-heart"></i> by Saad Hussain.</span>
+          </div>
+      
+          <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+            <li class="ms-3"><a class="text-white fs-4" href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+            <li class="ms-3"><a class="text-white fs-4" href="#"><i class="fa-brands fa-github"></i></a></li>
+            <li class="ms-3"><a class="text-white fs-4" href="#"><i class="fa-brands fa-youtube"></i></a></li>
+          </ul>
+            </div>
+          </div>
+          
+        </footer> 
+
+        <!-- <footer class="footer mt-auto py-3 bg-body-tertiary">
+          <div class="container">
+            <span class="text-body-secondary">Place sticky footer content here.</span>
+          </div>
+        </footer>
+
+         footer ends here  -->
     </body>
 </html>
