--- a/auctions/templates/auctions/login.html
+++ b/auctions/templates/auctions/login.html
@@ -1,10 +1,40 @@
 {% extends "auctions/layout.html" %}
+{% load static %}
 
 {% block body %}
 
-    <h2>Login</h2>
 
-    {% if message %}
+    <div class="d-flex align-items-center py-4">
+        
+    <main class="form-signin m-auto" style="width: 300px!important;">
+      <form>
+        <img class="mb-4" src="{% static 'auctions/logo.png' %}" alt="" width="72" height="70">
+        <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+    
+        <div class="form-floating">
+          <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" style="border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;">
+          <label for="floatingInput">Email address</label>
+        </div>
+        <div class="form-floating">
+          <input type="password" class="form-control" id="floatingPassword" placeholder="Password" style="border-top-left-radius: 0;
+    border-top-right-radius: 0;">
+          <label for="floatingPassword">Password</label>
+        </div>
+    
+        <div class="form-check text-start my-3">
+          <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault">
+          <label class="form-check-label" for="flexCheckDefault">
+            Remember me
+          </label>
+        </div>
+        <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
+      </form>
+    </main>
+    
+    </div>
+
+    {% comment %} {% if message %}
         <div>{{ message }}</div>
     {% endif %}
 
@@ -19,6 +49,6 @@
         <input class="btn btn-primary" type="submit" value="Login">
     </form>
 
-    Don't have an account? <a href="{% url 'auctions:register' %}">Register here.</a>
+    Don't have an account? <a href="{% url 'auctions:register' %}">Register here.</a> {% endcomment %}
 
 {% endblock %}
