login and register pages completed

--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -83,7 +83,7 @@
               <img src="{% static 'auctions/logo.png' %}" alt="Logo" width="26" height="26" class="d-inline-block align-text-top">
 
             </a>
-            <span class="mb-3 mb-md-0 text-body-primary text-capitalize text-warning">This App is made with  <i class="fa-regular fa-heart"></i> by Saad Hussain.</span>
+            <span class="mb-3 mb-md-0 text-body-primary text-capitalize text-warning">This App is made with  <i class="fa-solid fa-heart"></i> by Saad Hussain.</span>
           </div>
       
           <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
@@ -96,12 +96,6 @@
           
         </footer> 
 
-        <!-- <footer class="footer mt-auto py-3 bg-body-tertiary">
-          <div class="container">
-            <span class="text-body-secondary">Place sticky footer content here.</span>
-          </div>
-        </footer>
-
-         footer ends here  -->
+        <!-- footer ends here -->
     </body>
 </html>
