--- a/auctions/templates/auctions/register.html
+++ b/auctions/templates/auctions/register.html
@@ -1,13 +1,52 @@
 {% extends "auctions/layout.html" %}
+{% load static %}
 
 {% block body %}
 
     <h2>Register</h2>
 
-    {% if message %}
-        <div>{{ message }}</div>
-    {% endif %}
+    <div class="d-flex align-items-center py-4">
+        
+        <main class="form-signin m-auto" style="width: 300px!important;">
+          <form action="{% url 'auctions:login' %}" method="post">
+            <img class="mb-4" src="{% static 'auctions/logo.png' %}" alt="" width="72" height="70">
+            <h1 class="h3 mb-3 fw-normal">Register</h1>
+            {% if message %}
+                 <h5 class="text-danger">{{ message }}</h5 >
+            {% endif %}
+    
+            {% csrf_token %}
+        
+            <div class="form-floating">
+              <input type="text" name="username"  autofocus class="form-control" id="floatingUsername" placeholder="username" style="border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;">
+              <label for="floatingUsername">Username</label>
+            </div>
+            <div class="form-floating">
+                <input type="email" name="email" class="form-control" id="floatingEmail" placeholder="Email" style="border-radius:0;">
+                <label for="floatingEmail">Email</label>
+              </div>
+              <div class="form-floating">
+                <input type="password" name="password"  class="form-control" id="floatingPassword" placeholder="Password" style="border-radius:0;">
+                <label for="floatingPassword">Password</label>
+              </div>
+            <div class="form-floating">
+              <input type="password" class="form-control" name="confirmation" id="floatingPasswordConfirmation" placeholder="Confirm Password" style="border-top-left-radius: 0;
+        border-top-right-radius: 0;">
+              <label for="floatingPasswordConfirmation">Confirm Password</label>
+            </div>
+        
+            
+            <button class="btn btn-primary w-100 py-2 mt-4" type="submit">Register</button>
 
+            <p class="mt-3 mb-3 text-body-secondary">Already have an account? <a href="{% url 'auctions:login' %}">Log In here.</a></p>
+          </form>
+        </main>
+        
+        </div>
+
+
+{% comment %} 
     <form action="{% url 'auctions:register' %}" method="post">
         {% csrf_token %}
         <div class="form-group">
@@ -26,5 +65,7 @@
     </form>
 
     Already have an account? <a href="{% url 'auctions:login' %}">Log In here.</a>
+ {% endcomment %}
+
 
 {% endblock %}
