listing page almost completed

--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -83,13 +83,13 @@
               <img src="{% static 'auctions/logo.png' %}" alt="Logo" width="26" height="26" class="d-inline-block align-text-top">
 
             </a>
-            <span class="mb-3 mb-md-0 text-body-primary text-capitalize text-warning">This App is made with  <i class="fa-solid fa-heart"></i> by Saad Hussain.</span>
+            <span class="mb-3 mb-md-0 text-body-primary text-capitalize text-warning ">This App is made with  <i class="fa-solid fa-heart"></i> by Saad Hussain.</span>
           </div>
       
           <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-            <li class="ms-3"><a class="text-white fs-4" href="#"><i class="fa-brands fa-linkedin"></i></a></li>
-            <li class="ms-3"><a class="text-white fs-4" href="#"><i class="fa-brands fa-github"></i></a></li>
-            <li class="ms-3"><a class="text-white fs-4" href="#"><i class="fa-brands fa-youtube"></i></a></li>
+            <li class="ms-3"><a class="text-white fs-4" href="https://www.linkedin.com/in/saad-hussain-b55171203/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
+            <li class="ms-3"><a class="text-white fs-4" href="https://github.com/SaadHusayn" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+            <li class="ms-3"><a class="text-white fs-4" href="https://www.youtube.com/@SaadHussain56" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
           </ul>
             </div>
           </div>
