--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -1,7 +1,10 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
-<h1>Listing: {{listing.title}}</h1>
+<h1>Listing: {{listing.title}}</h1> 
+
+<!-- watchlist button starts -->
+
 {% if user.is_authenticated %}
     <form action="{% url 'auctions:watchlist' %}" method="POST">
         {% csrf_token %}
@@ -15,7 +18,240 @@
         {% endif %}
     </form>
 {% endif %}
-<img src="{{listing.image.url}}" alt="{{listing.title}}">
+
+<!-- watchlist button ends -->
+
+<div class="container">
+    <div class="row g-3">
+        <div class="col-lg-6 col-12">
+            <div class="d-flex align-items-center justify-content-center ">
+                <img src="{{listing.image.url}}" alt="{{listing.title}}" class="img-fluid rounded-2">
+             </div>
+        </div>
+
+        <div class="col-lg-6 col-12 heading">
+            <h1 class="  pb-2 border-bottom ">{{listing.title}}</h3>
+
+            <!-- <h3 class="heading pb-2 border-bottom ">${{listing.bidCurrentPrice}}</h3> -->
+            {% if listing.isListingOpen %}
+
+            <h3 class="my-2 text-warning">${{listing.bidCurrentPrice}}</h3>
+        
+            {% if user.is_authenticated %}
+                
+                {% if currentBidder %}
+                    <p class="my-2">{{numBids}} bid(s) so far. {{currentBidder}} bid is the current bid</p>
+                {% else %}
+                    <p class="my-2">{{numBids}} bid(s) so far.</p>
+                {% endif %}
+        
+                {% if creatorIsViewingTheList %}
+        
+                    <form action="{% url 'auctions:listing' listing.id %}" method="post">
+                        {% csrf_token %}
+                        <input class="btn btn-outline-warning my-2"  type="submit" value="Close">
+                        <input type="hidden" name="isBidingForm" value="0">
+                    </form>
+        
+                {% else %}
+        
+                    <form action="{% url 'auctions:listing' listing.id%}" method="post">
+                        {% csrf_token %}
+                        <input type="hidden" name="isBidingForm" value="1">
+                        
+                        
+
+                        <div class="input-group my-2">
+                            <input type="number" min="0" step="0.01" name="bidPrice" class="form-control" placeholder="Bid" aria-label="Bid" aria-describedby="button-addon2">
+                            <button class="btn btn-outline-warning" type="submit" id="button-addon2">Place Bid</button>
+                        </div>
+                        
+                        {% if message %}
+                            <div class="my-2 text-danger-emphasis tw-bold">{{message}}</div>
+                        {% endif %}
+                         
+                        
+                    </form>
+                {% endif %}
+            
+            {% else %}
+        
+            <a class="my-2" href="{% url 'auctions:login' %}">Login to place bid on this listing.</a>
+        
+            {% endif %}
+            
+        {% else %}
+        
+            {% if listing.winner %}
+        
+                {% if listing.winner == request.user %}
+                    <h5 class="my-2 text-warning" >Listing Closed at {{ listing.bidCurrentPrice }} with {{ numBids }} bid(s). You are the winner of this auction.</h5>
+                {% else %}
+                    <h5 class="my-2 text-warning" >Listing Closed at {{ listing.bidCurrentPrice }} with {{ numBids }} bid(s). {{ listing.winner }} is the winner of this auction.</h5>
+                {% endif %}
+        
+            {% else %}
+                <h5 class="my-2 text-warning" >Listing Closed at {{ listing.bidCurrentPrice }} with {{ numBids }} bid(s).</h5>
+            {% endif %}
+        
+        {% endif %} 
+        </div>
+    </div>
+</div>
+
+<nav class="container">
+    <div class="nav nav-tabs" id="nav-tab" role="tablist">
+      <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">Details</button>
+      <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Comments</button>
+      
+    </div>
+  </nav>
+  <div class="tab-content container" id="nav-tabContent">
+    <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab" tabindex="0">
+        <h5>{{listing.description}}</h5>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item">Listed by: <a href="{% url 'auctions:userProfile' listing.lister.username %}">{{ listing.lister }}</a></li>
+            {% if listing.category %}
+            <li class="list-group-item">Category:  <a href="{% url 'auctions:categoryListings' listing.category %}">{{listing.category}}</a></li>
+            {% else %}
+                <li class="list-group-item">Category: No Category Listed</li>
+            {% endif %}
+            <li class="list-group-item">Created On: {{listing.time}}</li> 
+        </ul>
+    </div>
+    <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab" tabindex="0">
+
+
+        <div class="row d-flex justify-content-center">
+            <div class="col-md-8 col-lg-6">
+              <div class="card shadow-0 border bg-warning-subtle" >
+                <div class="card-body p-4">
+                
+                {% if user.is_authenticated %}
+                    <form action="{% url 'auctions:saveComment' listing.id %}" method="post">
+                        {% csrf_token %}
+                        <div data-mdb-input-init class="form-outline mb-4">
+                            <input type="text" name="comment" id="addANote" class="form-control" placeholder="Write Comment..." />
+                        </div>
+                        <!-- <input type="text" name="comment" placeholder="Write Comment">
+                        <input type="submit" value="Save"> -->
+                    </form>
+                {% else %}
+                    <a href="{% url 'auctions:login' %}">Login to write Comment on this listing.</a>
+                {% endif %}
+                    
+                  <!-- <div data-mdb-input-init class="form-outline mb-4">
+                    <input type="text" id="addANote" class="form-control" placeholder="Type comment..." />
+                  </div> -->
+
+                  {% for comment in comments %}
+
+                    <div class="card mb-4">
+                        <div class="card-body">
+                        <p>{{comment.content}}</p>
+            
+                        <div class="d-flex justify-content-between">
+                            <div class="d-flex flex-row align-items-center">
+                            <p class="small mb-0 ms-2">{{comment.writer}}</p>
+                            </div>
+                            <div class="d-flex flex-row align-items-center">
+                            <p class="small text-muted mb-0">{{comment.time}}</p>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
+	
+                    <!-- <p>{{comment.writer}} on {{comment.time}}:</p>
+                    <p>{{comment.content}}</p> -->
+                    
+                {% empty %}
+                    <div class="card mb-4">
+                        <div class="card-body">
+                        <p>No Comments on this listing so far.</p>
+                        </div>
+                    </div>
+                    <!-- (No Comments on this listing so far.) -->
+                {% endfor %}
+          
+                  <!-- <div class="card mb-4">
+                    <div class="card-body">
+                      <p>Type your note, and hit enter to add it</p>
+          
+                      <div class="d-flex justify-content-between">
+                        <div class="d-flex flex-row align-items-center">
+                          <p class="small mb-0 ms-2">Martha</p>
+                        </div>
+                        <div class="d-flex flex-row align-items-center">
+                          <p class="small text-muted mb-0">July 3, 2024, 6:12 a.m.</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+          
+                  <div class="card mb-4">
+                    <div class="card-body">
+                      <p>Type your note, and hit enter to add it</p>
+          
+                      <div class="d-flex justify-content-between">
+                        <div class="d-flex flex-row align-items-center">
+                          <p class="small mb-0 ms-2">Johny</p>
+                        </div>
+                        <div class="d-flex flex-row align-items-center">
+                            <p class="small text-muted mb-0">July 3, 2024, 6:12 a.m.</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+          
+                  <div class="card mb-4">
+                    <div class="card-body">
+                      <p>Type your note, and hit enter to add it</p>
+          
+                      <div class="d-flex justify-content-between">
+                        <div class="d-flex flex-row align-items-center">
+                          <p class="small mb-0 ms-2">Mary Kate</p>
+                        </div>
+                        <div class="d-flex flex-row align-items-center text-body">
+                            <p class="small text-muted mb-0">July 3, 2024, 6:12 a.m.</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+          
+                  <div class="card ">
+                    <div class="card-body">
+                      <p>Type your note, and hit enter to add it</p>
+          
+                      <div class="d-flex justify-content-between">
+                        <div class="d-flex flex-row align-items-center">
+                          <p class="small mb-0 ms-2">Johny</p>
+                        </div>
+                        <div class="d-flex flex-row align-items-center">
+                            <p class="small text-muted mb-0">July 3, 2024, 6:12 a.m.</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="card mb-4">
+                    <div class="card-body">
+                      <p>No Comments Posted.</p>
+                    </div>
+                  </div> -->
+
+
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+    </div>
+  </div>
+
+<img src="{{listing.image.url}}" alt="{{listing.title}}" class="img-fluid">
+
+
 <h5>{{listing.description}}</h5>
 
 {% if listing.isListingOpen %}
@@ -28,7 +264,7 @@
 
             <form action="{% url 'auctions:listing' listing.id %}" method="post">
                 {% csrf_token %}
-                <input type="submit" value="Close">
+                <input class="btn btn-outline-warning" type="submit" value="Close">
                 <input type="hidden" name="isBidingForm" value="0">
             </form>
 
@@ -75,7 +311,9 @@
         <p>Listing Closed at {{ listing.bidCurrentPrice }} with {{ numBids }} bid(s).</p>
     {% endif %}
 
-{% endif %}
+{% endif %} 
+
+<!-- details section starts  -->
 
 <h5>Details</h5>
 
@@ -85,7 +323,12 @@
 {% else %}
     <li>Category: No Category Listed</li>
 {% endif %}
-<li>Created On: {{listing.time}}</li>
+<li>Created On: {{listing.time}}</li> 
+
+<!-- details section ends  -->
+
+
+<!-- comment section starts  -->
 
 <h5>Comments:</h5>
 {% for comment in comments %}
@@ -106,5 +349,8 @@
 {% else %}
 	<a href="{% url 'auctions:login' %}">Login to write Comment on this listing.</a>
 {% endif %}
+
+<!-- comment section ends  -->
+
 
 {% endblock %}
