--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -1,7 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+
 body {
-    padding: 10px;
+    padding: 0px;
+    /* font-family: "Josefin Sans", sans-serif !important; */
+    font-family: "Playfair Display", serif !important;
+
 }
 
 .card img{
     max-height: 200px !important;
+}
+
+.heading{
+    font-family: "Playfair Display", serif !important;
+}
+
+footer li a:hover i{
+    color: #ffc107;
 }
